--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "arena-3-0"
+name = "arena3"
 version = "0.1.0"
 description = ""
 authors = ["Matthew Jennings <matthew.jennings@outlook.com.au>"]
 readme = "README.md"
-packages = [{include = "arena_3"}]
+packages = [{include = "arena3", from = ".."}]
 
 [tool.poetry.dependencies]
 "AutoROM.accept-rom-license" = {extras = ["accept-rom-license"], version = "^0.6.1"}
