--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ october23_duplicate_zeros
 january24_arena
 *ignore.ipynb
 changes.md
+torch-2.2.2+cu121-cp311-cp311-win_amd64.whl
+torch-2.4.0+cu121-cp311-cp311-win_amd64.whl
+chapter1_transformer_interp/exercises/part1_transformer_from_scratch/answers_part1.ipynb
+chapter1_transformer_interp/exercises/part1_transformer_from_scratch/answers_take2.ipynb
+chapter1_transformer_interp/exercises/part3_indirect_object_identification/answers_ioi.ipynb
+chapter1_transformer_interp/exercises/part4_superposition_and_saes/answer.ipynb
+chapter1_transformer_interp/exercises/part4_superposition_and_saes/answers_S7.ipynb
